@@ -2,17 +2,17 @@
 /*
  * Gallery - a web based photo album viewer and editor
  * Copyright (C) 2000-2006 Bharat Mediratta
- * 
+ *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or (at
  * your option) any later version.
- * 
+ *
  * This program is distributed in the hope that it will be useful, but
  * WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * General Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 51 Franklin Street - Fifth Floor, Boston, MA  02110-1301, USA.
@@ -30,15 +30,15 @@ echo '<p class="g-sitedesc">';
 echo sprintf(gTranslate('core', "Windows XP comes with a nice feature that allows you to publish content from your desktop directly to a web service.  %s <b>has experimental</b> support for this feature."), Gallery());
 echo gTranslate('core', "It's relatively easy to configure.");
 
-?>  
+?>
 
 </p>
 
-  <center><b><?php echo gTranslate('core', "Step 1") ?></b></center>
+  <div class="center g-emphasis"><?php echo gTranslate('core', "Step 1") ?></div>
 
   <div class="g-albumdesc-cell">
-<?php 
-	echo sprintf(gTranslate('core', "Download the %sXP Configuration File%s"), 
+<?php
+	echo sprintf(gTranslate('core', "Download the %sXP Configuration File%s"),
 		'<a href="'.makeGalleryUrl('publish_xp.php').'">', '</a>');
 	echo sprintf(gTranslate('core', "Save this file on your PC and rename it %s."), '"install_registry.reg"');
 	echo gTranslate('core', "If it asks you for confirmation about changing the file type, answer &quot;yes&quot;.");
@@ -52,7 +52,7 @@ echo gTranslate('core', "It's relatively easy to configure.");
   </div>
 
   <br>
-  <center><b><?php echo gTranslate('core', "Step 2") ?></b></center>
+  <div class="center g-emphasis"><?php echo gTranslate('core', "Step 2") ?></div>
 
   <div class="g-albumdesc-cell">
 <?php 	echo gTranslate('core', "Open your Windows explorer and browse to a folder containing supported images.") ."  ";
@@ -62,9 +62,9 @@ echo gTranslate('core', "It's relatively easy to configure.");
 
 </div>
 
-<center>  
-  <a href="<?php echo makeGalleryUrl("add_photos.php") ?>"><?php echo gTranslate('core', "Return to Add Photos") ?></a>
-</center>
+<div class="center">
+  <?php echo galleryLink(makeGalleryUrl('add_photos.php', array('type' => 'popup')),gTranslate('core', "Return to Add Photos")); ?>
+</div>
 
 </body>
 </html>
