@@ -1,3 +1,10 @@
+2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b3
+
+ * Fix: Return link from publish XP docs was wrong.
+	Thanks to Peter Schumacher.
+
+ * Fix: css in tabs in add_photos popup.
+
 2006-11-02 Jens Tkotz <jens@peino.de> 1.6-alpha3-svn-b2
 
  * Fix: Rotating and flipping.
